--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <!--<version>5.1.41</version>-->
-            <version>8.0.11</version>
+            <version>5.1.41</version>
+            <!--<version>8.0.11</version>-->
         </dependency>
         <!--oracle驱动包-->
         <dependency>
@@ -114,6 +114,19 @@
             <version>1.3.2</version>
             <scope>compile</scope>
             <optional>true</optional>
+        </dependency>
+
+        <!--redis依赖包-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.23</version>
         </dependency>
 
     </dependencies>
