--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,9 +59,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mybatistest?useSSL=false&serve
 spring.datasource.username=root
 spring.datasource.password=root
 # mysql5的驱动
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # mysql8的驱动
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
 spring.datasource.druid.max-active=20
@@ -88,3 +88,27 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+
+############################################################
+#
+# REDIS 配置
+#
+############################################################
+# Redis数据库索引（默认为0）
+#spring.redis.database=1
+# Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+#spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=1000
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=10
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=2
+# 连接超时时间（毫秒）
+#spring.redis.timeout=0
