--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 spring.devtools.restart.enabled=true
 #设置重启的目录,添加那个目录的文件需要restart
 spring.devtools.restart.additional-paths=src/main/java
-# 为mybatis设置，生产环境可删除
+# 为mybatis设置mapper热部署，生产环境可删除
 restart.include.mapper=/mapper-[\\w-\\.]+jar
 restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
 #排除哪个目录的文件不需要restart
@@ -50,3 +50,38 @@ server.tomcat.uri-encoding=UTF-8
 # 日志文件名称，默认为spring.log
 #logging.file=myapp.log
 
+############################################################
+#
+# 配置数据源相关	使用阿里巴巴的 druid 数据源
+#
+############################################################
+spring.datasource.url=jdbc:mysql://localhost:3306/zjb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.initial-size=1
+spring.datasource.druid.min-idle=1
+spring.datasource.druid.max-active=20
+spring.datasource.druid.test-on-borrow=true
+spring.datasource.druid.stat-view-servlet.allow=true
+
+############################################################
+#
+# mybatis 配置
+#
+############################################################
+#mybatis
+mybatis.type-aliases-package=com.zjb.model
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+#mapper 通用 Mapper 配置  通用mapper地址
+#mappers 多个接口时逗号隔开
+mapper.mappers=com.zjb.utils.MyMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
+
+#pagehelper 分页插件配置
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
