--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,7 +55,7 @@ server.tomcat.uri-encoding=UTF-8
 # 配置数据源相关	使用阿里巴巴的 druid 数据源
 #
 ############################################################
-spring.datasource.url=jdbc:mysql://localhost:3306/zjb
+spring.datasource.url=jdbc:mysql://localhost:3306/mysqltest
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
