--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,10 +55,13 @@ server.tomcat.uri-encoding=UTF-8
 # 配置数据源相关	使用阿里巴巴的 druid 数据源
 #
 ############################################################
-spring.datasource.url=jdbc:mysql://localhost:3306/mysqltest
+spring.datasource.url=jdbc:mysql://localhost:3306/mybatistest?useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# mysql5的驱动
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# mysql8的驱动
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
 spring.datasource.druid.max-active=20
