--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,9 +59,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mybatistest?useSSL=false&serve
 spring.datasource.username=root
 spring.datasource.password=root
 # mysql5的驱动
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # mysql8的驱动
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
 spring.datasource.druid.max-active=20
