--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 #关闭缓存, 即时刷新
 #spring.freemarker.cache=false
 #spring.thymeleaf.cache=true
-
 #热部署生效
 spring.devtools.restart.enabled=true
 #设置重启的目录,添加那个目录的文件需要restart
@@ -29,7 +28,6 @@ server.session-timeout=60
 # 该服务绑定IP地址，启动服务器时如本机不是该IP地址则抛出异常启动失败,
 # 只有特殊需求的情况下才配置, 具体根据各自的业务来设置
 #server.address=192.168.1.2
-
 ############################################################
 # Server - tomcat 相关常用配置
 ############################################################
@@ -49,7 +47,6 @@ server.tomcat.uri-encoding=UTF-8
 #logging.path=H:/springboot-tomcat-tmp
 # 日志文件名称，默认为spring.log
 #logging.file=myapp.log
-
 ############################################################
 #
 # 配置数据源相关	使用阿里巴巴的 druid 数据源
@@ -67,7 +64,6 @@ spring.datasource.druid.min-idle=1
 spring.datasource.druid.max-active=20
 spring.datasource.druid.test-on-borrow=true
 spring.datasource.druid.stat-view-servlet.allow=true
-
 ############################################################
 #
 # mybatis 配置
@@ -76,19 +72,16 @@ spring.datasource.druid.stat-view-servlet.allow=true
 #mybatis
 mybatis.type-aliases-package=com.zjb.model
 mybatis.mapper-locations=classpath:mapper/*.xml
-
 #mapper 通用 Mapper 配置  通用mapper地址
 #mappers 多个接口时逗号隔开
 mapper.mappers=com.zjb.utils.MyMapper
 mapper.not-empty=false
 mapper.identity=MYSQL
-
 #pagehelper 分页插件配置
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
-
 ############################################################
 #
 # REDIS 配置
@@ -112,3 +105,23 @@ spring.redis.pool.max-idle=10
 spring.redis.pool.min-idle=2
 # 连接超时时间（毫秒）
 #spring.redis.timeout=0
+############################################################
+#
+# ACTUATOR 配置
+#
+############################################################
+#server.port=443
+#server.ssl.enabled=true
+#server.ssl.key-store=e:\\keys\\tomcat.keystore
+#server.ssl.key-password=password
+#enable all endpoints by default
+management.endpoints.enabled-by-default=true
+# expose all web endpoints
+management.endpoints.web.exposure.include=*
+# 声明访问actuator的根路径
+#management.endpoints.web.base-path=/manage
+#spring.security.user.name=rsems
+#spring.security.user.password=rsems
+#spring.security.user.roles=SUPERUSER
+management.endpoint.health.show-details=always
+spring.boot.admin.client.url=http://localhost:8080
